<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.xelement.moment.widget.custom.PublicTitleView
        android:id="@+id/mTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnablePureScrollMode="true">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/mUpdateAvatarAction"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x140"
                    android:background="@drawable/public_white_selector">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/x25"
                        android:text="头像"
                        android:textColor="@color/flash_black"
                        android:textSize="15sp" />

                    <com.xelement.moment.widget.custom.CircleImageView
                        android:id="@+id/mAvatarImg"
                        android:layout_width="@dimen/x90"
                        android:layout_height="@dimen/x90"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/x75"
                        android:src="@mipmap/avatar_tiger" />

                    <ImageView
                        android:layout_width="@dimen/x38"
                        android:layout_height="@dimen/x38"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/x25"
                        android:src="@mipmap/arrow_right" />

                </RelativeLayout>

                <com.xelement.moment.widget.custom.RowIconView
                    android:id="@+id/mNicknameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowLabel="@string/nickname"
                    app:rowValueHint="十步杀一人"
                    app:showArrow="true" />

                <com.xelement.moment.widget.custom.RowIconView
                    android:id="@+id/mMobileView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowLabel="@string/moment_id"
                    app:showArrow="false"
                    app:rowValueHint="2342676472836"/>

                <com.xelement.moment.widget.custom.RowIconView
                    android:id="@+id/mNinetyIdView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x20"
                    app:rowLabel="@string/bind_mobile"
                    app:showArrow="true"/>

                <com.xelement.moment.widget.custom.RowIconView
                    android:id="@+id/mSoundView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowLabel="@string/msg_push"
                    app:showArrow="true"/>

                <com.xelement.moment.widget.custom.RowIconView
                    android:id="@+id/mPushSwitchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowLabel="@string/clear_cache"
                    app:showArrow="false"
                    app:rowValueHint="333kb"/>

                <com.xelement.moment.widget.custom.RowIconView
                    android:id="@+id/mClearCacheView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x20"
                    app:showArrow="true"
                    app:rowLabel="@string/agreement" />

                <com.xelement.moment.widget.custom.RowIconView
                    android:id="@+id/mServiceView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowLabel="@string/about_us"
                    app:showArrow="true" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


</LinearLayout>